--- a/views/.env
+++ b/views/.env
@@ -1,5 +1,5 @@
 # MongoDB Atlas connection string
-MONGODB_URI=mongodb+srv://blue:langitbiru@database.uvnzksz.mongodb.net/?retryWrites=true&w=majority&appName=Database
+MONGODB_URI=mongodb+srv://time85267:YdeqSENcn3O45vMZ@aedra.odszjk6.mongodb.net/?retryWrites=true&w=majority&appName=Aedra
 
 # Gemini API key
 GEMINI_API_KEY=AIzaSyC38YRw7x-hw6CIkOaoCG2K5m2q3PsN2mo
