--- a/views/.env
+++ b/views/.env
@@ -1,5 +1,5 @@
 # MongoDB Atlas connection string
-MONGODB_URI=mongodb+srv://Aedra_admin:DemamBerdarah@aedra.odszjk6.mongodb.net/?retryWrites=true&w=majority&appName=Aedra
+MONGODB_URI=mongodb+srv://Aedra_admin:demam@aedra.odszjk6.mongodb.net/?retryWrites=true&w=majority&appName=Aedra
 
 # Gemini API key
 GEMINI_API_KEY=AIzaSyDPThePpXoJrcmuoiGB1j64CtwPoCjUAgw
